# LabsNeuroInterfaces

./: README.md  main.py  pyproject.toml  requirements.txt
sketch/: pyserial_text.ino
src/neurocapture/: app.py
src/neurocapture/acquire/: acquire.py  recorder.py
src/neurocapture/analysis/: common.py  eeg.py
src/neurocapture/core/: types.py
src/neurocapture/io/: base.py  firmata_driver.py  serial_driver.py  synthetic_driver.py
src/neurocapture/viz/: realtime_plot.py
